--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <div class="container" id="game">
             <!--Render JS-->
         </div>
+
+        <script type="module" src="./src/index.js"></script>
     </body>
 </html>
